<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ListActivity">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".FridgeActivity">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recipieList"
                android:layout_width="350dp"
                android:layout_height="340dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipie_name" />

            <Button
                android:id="@+id/Add_recipie"
                android:layout_width="247dp"
                android:layout_height="61dp"
                android:layout_marginTop="16dp"
                android:onClick="add_recipie"
                android:text="@string/add_item_to_fridge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/insert_ingredient" />

            <Button
                android:id="@+id/show_recipes"
                android:layout_width="247dp"
                android:layout_height="61dp"
                android:layout_marginTop="16dp"
                android:onClick="display_recipes"
                android:text="@string/show_recipes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Add_recipie" />

            <EditText
                android:id="@+id/insert_recipie"
                android:layout_width="265dp"
                android:layout_height="48dp"
                android:layout_marginStart="72dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/recipie_name"
                android:inputType="textPersonName"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipieList" />

            <EditText
                android:id="@+id/insert_ingredient"
                android:layout_width="265dp"
                android:layout_height="48dp"
                android:layout_marginStart="72dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/ingredient_name"
                android:inputType="textPersonName"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/insert_recipie" />

            <TextView
                android:id="@+id/recipie_name"
                android:layout_width="136dp"
                android:layout_height="25dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="32dp"
                android:text="@string/recipie_title"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>