<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FridgeActivity">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/shoppingList"
            android:layout_width="357dp"
            android:layout_height="464dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_item_name" />

        <Button
            android:id="@+id/Add_item_to_list"
            android:layout_width="247dp"
            android:layout_height="61dp"
            android:layout_marginTop="14dp"
            android:onClick="Add_item_to_list"
            android:text="@string/add_item_to_fridge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/insert_to_list" />

        <EditText
            android:id="@+id/insert_to_list"
            android:layout_width="265dp"
            android:layout_height="48dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/item_name"
            android:inputType="textPersonName"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoppingList" />

        <TextView
            android:id="@+id/list_item_name"
            android:layout_width="136dp"
            android:layout_height="25dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="32dp"
            android:text="@string/item_name_title"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>